2011-04-20  Dirk Pranke  <dpranke@chromium.org>

        Pull in more flaky expectations.

        * platform/chromium/test_expectations.txt:

2011-04-20  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change. Pull in expectations from
        overrides file.

        * platform/chromium/test_expectations.txt:

2011-04-20  Tony Chang  <tony@chromium.org>

        Update 2 more tests that are missing png files.

        * platform/chromium-mac/fast/borders/borderRadiusDotted06-expected.checksum: Removed.
        * platform/chromium-mac/fast/borders/borderRadiusDotted06-expected.png: Added. png with embedded checksum pulled from the bot.
        * platform/chromium-win/compositing/repaint/become-overlay-composited-layer-expected.checksum: Removed. This file is not used since we don't
            run compositing tests w/CPU rendering and there's a GPU result in chromium-gpu-win.
        * platform/chromium/test_expectations.txt:  Remove these tests.

2011-04-20  Jian Li  <jianli@chromium.org>

        Unreviewed, fixed typo in the failed test added to chromium test
        expectations.

        * platform/chromium/test_expectations.txt:

2011-04-20  Tony Chang  <tony@chromium.org>

        More .checksum file cleanup.

        * fast/css/background-clip-values-expected.checksum: Removed. This is a duplicate of the .checksum
            file in platform/mac.
        * platform/mac-leopard/fast/backgrounds/size/contain-and-cover-expected.checksum: Correct checksum by
            regenerating on my leopard machine.
        * platform/mac-leopard/fast/backgrounds/size/contain-and-cover-expected.png: Added.

2011-04-20  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Ryosuke Niwa.

        Continue (3rd) experiment with moving caret by word in visual order.
        https://bugs.webkit.org/show_bug.cgi?id=58294

        * editing/selection/move-by-word-visually-expected.txt:
        * editing/selection/move-by-word-visually.html:
