@@ -1,0 +1,3 @@
+Ensure that simulated click is not dispatched to a disabled node. Clicking on the label should not change the value of the checkbox.
+
+PASS
