@@ -1,3 +1,13 @@
+2011-04-20  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        REGRESSION(r82376): Clicking on a label, associated with a disabled input element changes state of the element.
+        https://bugs.webkit.org/show_bug.cgi?id=59037
+
+        * fast/events/simulated-click-disabled-expected.txt: Added.
+        * fast/events/simulated-click-disabled.html: Added.
+
 2011-04-20  Dirk Pranke  <dpranke@chromium.org>
 
         Pull in more flaky expectations.
